# langOps

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  tasks.md
.claude/: launch.json
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_node_rollups.py  0003_log_source.py  0004_replay_lineage.py  0005_llm_stubbed.py  0006_llm_text_search.py  0007_error_type.py
backend/src/langops_api/: composition.py  main.py  retention.py
backend/src/langops_api/application/: __init__.py
backend/src/langops_api/application/dto/: __init__.py
backend/src/langops_api/application/mappers/: __init__.py  otlp_mapper.py  semconv.py
backend/src/langops_api/application/services/: ingest.py  queries.py  reports.py  retention.py
backend/src/langops_api/domain/: __init__.py  errors.py
backend/src/langops_api/domain/entities/: __init__.py
backend/src/langops_api/domain/repositories/: __init__.py
backend/src/langops_api/domain/services/: __init__.py  cost_calculator.py  execution_comparator.py  node_categorizer.py  state_differ.py
backend/src/langops_api/domain/value_objects/: __init__.py
backend/src/langops_api/infrastructure/: __init__.py  logging_config.py  settings.py
backend/src/langops_api/infrastructure/cache/: __init__.py
backend/src/langops_api/infrastructure/db/: pricing_seed.py  session.py
backend/src/langops_api/infrastructure/db/models/: __init__.py
backend/src/langops_api/infrastructure/db/repositories/: __init__.py
backend/src/langops_api/infrastructure/otlp/: __init__.py
backend/src/langops_api/infrastructure/pricing/: README.md  __init__.py  anthropic.json  catalog.py  custom.json  google.json  groq.json  mistral.json  ollama.json  openai.json
backend/src/langops_api/presentation/: __init__.py
backend/src/langops_api/presentation/api/v1/: costs.py  errors.py  executions.py  graphs.py  health.py  logs.py  metrics.py  nodes.py  search.py  threads.py
backend/src/langops_api/presentation/events/: __init__.py
backend/src/langops_api/presentation/ingest/: __init__.py
backend/src/langops_api/presentation/schemas/: __init__.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_compare.py  test_errors.py  test_health.py  test_ingest.py  test_ingest_protobuf.py  test_logs.py  test_node_inspection.py  test_replay.py  test_reports.py  test_search.py  test_threads.py
backend/tests/integration/: test_node_rollup_batching.py  test_project_repo.py  test_retention.py
backend/tests/unit/: test_domain_services.py  test_execution_comparator.py  test_pricing_catalog.py
collector/: otel-collector-config.yaml
dashboard/: next.config.mjs  package-lock.json  package.json
docker/: backend.Dockerfile  dashboard.Dockerfile
docs/: README.md  architecture.md  backend.md  collector.md  contributing.md  dashboard.md  database.md  examples.md  sdk.md  semantic-conventions.md  setup.md
sdk/: README.md  pyproject.toml
sdk/src/langops/: __init__.py  __main__.py  _replay.py  _stubs.py  config.py  semconv.py
sdk/src/langops/capture/: diff.py  redaction.py  state.py
sdk/src/langops/export/: processors.py  tracer.py
sdk/src/langops/instrumentation/: callbacks.py  checkpointer.py  graph.py  logging_handler.py  runtime.py
sdk/tests/integration/: test_cached_replay.py  test_instrumentation.py  test_replay.py
sdk/tests/unit/: test_capture.py  test_public_surface.py
(+39 files in other folders)
