[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langops-api"
version = "0.1.0"
description = "LangOps backend — OTLP ingestion and query REST API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Abdellatif Chakor" }
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
    "structlog>=24.1",
    "opentelemetry-proto>=1.25",
    "protobuf>=4.25",
    "uuid6>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/langops_api"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's Depends()/Query() in argument defaults is the intended idiom.
ignore = ["B008"]

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# ── Layering contracts (architecture.md §3.1, enforced in CI) ──────────
[tool.importlinter]
root_package = "langops_api"

[[tool.importlinter.contracts]]
name = "Layered architecture: presentation -> application -> domain <- infrastructure"
type = "layers"
layers = [
    "langops_api.presentation",
    "langops_api.application",
    "langops_api.domain",
]

[[tool.importlinter.contracts]]
name = "Domain imports no other layer"
type = "forbidden"
source_modules = ["langops_api.domain"]
forbidden_modules = [
    "langops_api.application",
    "langops_api.presentation",
    "langops_api.infrastructure",
]

[[tool.importlinter.contracts]]
name = "Presentation never imports infrastructure directly"
type = "forbidden"
source_modules = ["langops_api.presentation"]
forbidden_modules = ["langops_api.infrastructure"]
# The composition root (langops_api.composition) is the single DI bridge that
# legitimately wires infrastructure into the app; routers reach infrastructure
# only through its Depends() providers, never directly. This contract enforces
# the "directly" — the transitive path through composition is by design.
allow_indirect_imports = "true"
